# flashback

./: .gitignore  README.md  pyproject.toml
flashback-backend/: .env  pyproject.toml
flashback-backend/app/: main.py  schemas.py  services.py
flashback-backend/app/static/iconic/: MainBefore.jpg:Zone.Identifier  gratisography-augmented-reality-800x525.jpg:Zone.Identifier  napoleon.jpg:Zone.Identifier  photo-1575936123452-b67c3203c357.jpg:Zone.Identifier
flashback-frontend/: App.js  app.json  package-lock.json  package.json
flashback-frontend/screens/: HomeScreen.js  IconicSelectionScreen.js  ResultScreen.js  UploadScreen.js
